-Fixed some overlapping visuals

--- a/visualization/css/interactive2.css
+++ b/visualization/css/interactive2.css
@@ -287,6 +287,7 @@ table.new_article .ui-tabs-selected {
 	padding-left: 20px;
 	padding-right: 20px;
 	padding-bottom: 5px;
+	background: #FFFFFF;
 }
 
 #pagination {
